<resources>
    <string name="app_name">My Application</string>
    <string name="loginAsAdmin">Login As Admin</string>
    <string name="loginAsDriver">Login As Driver</string>
    <string name="login">Login</string>
    <string name="quickenLoans">\@QuickenLoans.com</string>
    <string name="signup">Signup</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="coordinator">Co-ordinator</string>
    <string name="coordinatorNumber">Co-ordinator Number</string>
    <string name="create">Create</string>
    <string name="createNewEvent">Create New Event</string>
    <string name="today">Today</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startLocation">Start Location</string>
    <string name="destination">Destination</string>
    <string name="contactNumber">Contact Number</string>
    <string name="eventDetails">Event Details</string>
    <string name="register">Register</string>
    <string name="navigateToDestination">Navigate To Destination</string>
    <string name="navigateToSource">Navigate To Source</string>
    <string name="title_activity_driver_main">DriverMainActivity</string>
    <string name="title_activity_driver_maps">Map</string>
    <string name="title_activity_events_tabbed">EventsTabbedActivity</string>
</resources>
