<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wtuscano.myapplication.AdminLoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/wallet_holo_blue_light"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quickenLoans"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="79dp"
        android:layout_below="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quickenLoans"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="79dp"
        android:layout_below="@+id/etLoginUsername"
        android:layout_alignRight="@+id/etLoginUsername"
        android:layout_alignEnd="@+id/etLoginUsername" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textColor="@color/wallet_holo_blue_light"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/etLoginPassword"
        android:layout_alignLeft="@+id/btnSignup"
        android:layout_alignStart="@+id/btnSignup" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@+id/etConfirmPassword"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etLoginUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="DanGilbert"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/tvLogin"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etLoginPassword"
        android:layout_alignStart="@+id/etLoginPassword"
        android:layout_below="@+id/tvSignup"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="DanGilbert"/>

    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etSignupPassword"
        android:layout_alignRight="@+id/etSignupPassword"
        android:layout_below="@+id/etSignupPassword"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword" />

</RelativeLayout>
